# Matching-Engine

./: .gitignore  CMakeLists.txt  README.md
docs/: BUILD_AND_RUN.md
frontend/: index.html
include/: broadcast_queue.h  global_state.h  order.h  order_book.h  order_store.h  stop_order_manager.h  wal.h  ws_server.h
src/: broadcast_queue.cpp  global_state.cpp  main.cpp  order_book.cpp  order_store.cpp  server.cpp  stop_order_manager.cpp  wal.cpp  wal_integration.cpp  ws_server.cpp
tests/: benchmark.cpp  catch_main.cpp  test_order.cpp  test_order_book.cpp
